LeafPredictor 0.9

2008-11-07 Andrew Schofield <the.uncle.fungus@gmail.com>
* Fixed broken parser for LeafAnalyser files. LeafPredictor can now read
  eigensystems with more than 48 landmarks correctly.

2008-09-23 Andrew Schofield <the.uncle.fungus@gmail.com>
* Added faint background to unselected predictions to make the display more
  obvious

LeafPredictor 0.8

2008-05-15 Andrew Schofield <the.uncle.fungus@gmail.com>
* Added option to remove landmarks from display.
* Added value field for manual scale slider.
* Adjusted manual scale multiplier to increase it by a factor of 2.
* Fixed antialiasing function for screenshots.
* Fixed Windows build system.
* Fixed nasty grey background for sliders on Windows.
* Improved Windows program icon.