@@ -1,5 +1,8 @@
 LeafPredictor 0.9
 
+2008-11-28 Andrew Schofield <the.uncle.fungus@gmail.com>
+* Made manual scale the default method on loading an eigensystem.
+
 2008-11-07 Andrew Schofield <the.uncle.fungus@gmail.com>
 * Fixed broken parser for LeafAnalyser files. LeafPredictor can now read
   eigensystems with more than 48 landmarks correctly.
